--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
 				</div>
 			</article>
 
-		<!-- Work -->
+		<!-- technologies -->
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
+						<h2>Technologies I'm familiar with.</h2>
 						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
+							<!-- <section class="box style1"> -->
+								<span class="fab fa-js-square"></span>
+								<h3>JavaScript</h3>
+								<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
+							<!-- </section> -->
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
@@ -65,7 +65,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
+								<span class="icon technologies fa-thumbs-up"></span>
 								<h3>Feugiat posuere</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
@@ -88,22 +88,22 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/syphr.png" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
+								<a href="https://syphr.herokuapp.com/" class="image featured"><img src="images/syphr.png" alt="" /></a>
+								<h3><a href="https://syphr.herokuapp.com/">Syphr</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/scratchio.png" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
+								<a href="https://goodgamesgg.herokuapp.com/" class="image featured"><img src="images/goodgamesgg.png" alt="" /></a>
+								<h3><a href="https://goodgamesgg.herokuapp.com/">GoodGames.gg</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/goodgamesgg.png" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
+								<a href="https://project-whisk.herokuapp.com/" class="image featured"><img src="images/scratchio.png" alt="" /></a>
+								<h3><a href="https://project-whisk.herokuapp.com/">Scratch.io</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
@@ -128,8 +128,45 @@
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div> -->
+						<div class="container">
+							<h2>Some highlights from my past life</h2>
+							<p>Proin odio consequat sapien vestibulum consequat lorem dolore feugiat.</p>
+						</div class="container">
+						<div class="row aln-center">
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://syphr.herokuapp.com/" class="image featured"><img src="images/criminalMinds.jpg" alt="" /></a>
+									<h3><a href="https://syphr.herokuapp.com/">Criminal Minds</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://goodgamesgg.herokuapp.com/" class="image featured"><img src="images/shameless1.jpeg"
+											alt="" /></a>
+									<h3><a href="https://goodgamesgg.herokuapp.com/">Shameless</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://project-whisk.herokuapp.com/" class="image featured"><img src="images/super1.jpeg"
+											alt="" /></a>
+									<h3><a href="https://project-whisk.herokuapp.com/">Super</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+							<div class="col-5 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://www.imdb.com/title/tt5260026/" class="image featured"><img src="images/twp2.jpg"
+											alt="" /></a>
+									<h3><a href="https://www.imdb.com/title/tt5260026/">The Wedding Party</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+							
 					</div>
-					<footer>
+					<footer class="container">
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
@@ -172,12 +209,12 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
+								<li><a href="#" class="icon brands fab fa-angellist"><span class="label">Angel List</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
@@ -196,7 +233,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; James Lentzsch. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
