--- a/index.html
+++ b/index.html
@@ -51,24 +51,31 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<!-- <section class="box style1"> -->
-								<span class="fab fa-js-square"></span>
+								<span ><img src="images/javascriptIcon.png" alt="" /></span>
 								<h3>JavaScript</h3>
 								<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
 							<!-- </section> -->
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
+							<!-- <section class="box style1"> -->
+								<span ><img src="images/pythonIcon.png" alt="" /></span>
+								<h3>Python</h3>
+								<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
+							<!-- </section> -->
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon technologies fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
+							<!-- <section class="box style1"> -->
+							<span class="sequelize-span"><img class="sequelize-icon" src="images/sqlIcon.png" alt="" /></span>
+							<h3>SQL</h3>
+							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
+							<!-- </section> -->
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<!-- <section class="box style1"> -->
+								<span class="sequelize-span"><img class="sequelize-icon" src="images/sequelizeIcon.png" alt="" /></span>
+								<h3>Sequelize</h3>
+								<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
+							<!-- </section> -->
 						</div>
 					</div>
 					<footer>
