--- a/index.html
+++ b/index.html
@@ -45,146 +45,9 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Technologies I'm proficient in.</h2>
+						<h2>About me.</h2>
 						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 					</header>
-					<div class="row aln-center aln-bottom">
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-								<span ><img src="images/javascriptIcon.png" alt="" /></span>
-								<h3>JavaScript</h3>
-								<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-								<span ><img src="images/pythonIcon.png" alt="" /></span>
-								<h3>Python</h3>
-								<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/htmlIcon.png" alt="" /></span>
-							<h3>Html</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/cssIcon.png" alt="" /></span>
-							<h3>CSS</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/reactIcon.png" alt="" /></span>
-							<h3>React</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/reduxIcon.png" alt="" /></span>
-							<h3>Redux</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/flaskIcon.png" alt="" /></span>
-							<h3>Flask</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span class="sequelize-span"><img class="sequelize-icon" src="images/sqlAlchemyIcon.png" alt="" /></span>
-							<h3>SQLAlechemy</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/nodejsIcon.png" alt="" /></span>
-							<h3>Node.js</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span class="sequelize-span"><img class="sequelize-icon" src="images/expressIcon.png" alt="" /></span>
-							<h3>Express</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span class="sequelize-span"><img class="sequelize-icon" src="images/sqlIcon.png" alt="" /></span>
-							<h3>SQL</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-								<span class="sequelize-span"><img class="sequelize-icon" src="images/sequelizeIcon.png" alt="" /></span>
-								<h3>Sequelize</h3>
-								<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/jinjaIcon.png" alt="" /></span>
-							<h3>Jinja</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/pugIcon.png" alt="" /></span>
-							<h3>pug</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/dockerIcon.png" alt="" /></span>
-							<h3>Docker</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span class="sequelize-span"><img class="sequelize-icon" src="images/postbirdIcon.png" alt="" /></span>
-							<h3>Postbird</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span class="sequelize-span"><img class="sequelize-icon" src="images/postmanIcon.png" alt="" /></span>
-							<h3>Postman</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-					</div>
-					<h2>Technologies I dabble in.</h2>
-					<div class="row aln-center aln-bottom">
-						<div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/cIcon.png" alt="" /></span>
-							<h3>C</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div><div class="col-4 col-6-medium col-12-small">
-							<!-- <section class="box style1"> -->
-							<span><img src="images/rubyIcon.png" alt="" /></span>
-							<h3>Ruby</h3>
-							<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
-							<!-- </section> -->
-						</div>
-					</div>
 					
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
@@ -283,10 +146,107 @@
 					</div>
 					<footer class="container">
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						<a href="#contact" class="button large scrolly">Technologies I work with</a>
 					</footer>
 				</div>
 			</article>
+
+				<!-- technologies -->
+				<article id="work" class="wrapper style2">
+					<div class="container">
+						<header>
+							<h2>Technologies I'm proficient in.</h2>
+							<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						</header>
+						<div class="row aln-center aln-bottom">
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/javascriptIcon.png" alt="" /></span>
+								<h3>JavaScript</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/pythonIcon.png" alt="" /></span>
+								<h3>Python</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/htmlIcon.png" alt="" /></span>
+								<h3>Html</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/cssIcon.png" alt="" /></span>
+								<h3>CSS</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/reactIcon.png" alt="" /></span>
+								<h3>React</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/reduxIcon.png" alt="" /></span>
+								<h3>Redux</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/flaskIcon.png" alt="" /></span>
+								<h3>Flask</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span class="sequelize-span"><img class="sequelize-icon" src="images/sqlAlchemyIcon.png"
+										alt="" /></span>
+								<h3>SQLAlechemy</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/nodejsIcon.png" alt="" /></span>
+								<h3>Node.js</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span class="sequelize-span"><img class="sequelize-icon" src="images/expressIcon.png" alt="" /></span>
+								<h3>Express</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span class="sequelize-span"><img class="sequelize-icon" src="images/sqlIcon.png" alt="" /></span>
+								<h3>SQL</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span class="sequelize-span"><img class="sequelize-icon" src="images/sequelizeIcon.png" alt="" /></span>
+								<h3>Sequelize</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/jinjaIcon.png" alt="" /></span>
+								<h3>Jinja</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/pugIcon.png" alt="" /></span>
+								<h3>pug</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/dockerIcon.png" alt="" /></span>
+								<h3>Docker</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span class="sequelize-span"><img class="sequelize-icon" src="images/postbirdIcon.png" alt="" /></span>
+								<h3>Postbird</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span class="sequelize-span"><img class="sequelize-icon" src="images/postmanIcon.png" alt="" /></span>
+								<h3>Postman</h3>
+							</div>
+						</div>
+						<h2>Technologies I dabble in.</h2>
+						<div class="row aln-center aln-bottom">
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/cIcon.png" alt="" /></span>
+								<h3>C</h3>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<span><img src="images/rubyIcon.png" alt="" /></span>
+								<h3>Ruby</h3>
+							</div>
+						</div>
+				
+						<footer>
+							<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+							<a href="#portfolio" class="button large scrolly">Get in touch with me</a>
+						</footer>
+					</div>
+				</article>
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
