subtitle added and nav bar adjusted

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
+					<li><a href="#about">About Me</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#technologies">Technologies</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -34,7 +35,7 @@
 							<header>
 								<h1>Hi. I'm <strong>James Lentzsch</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>Defector from the entertainment industry turned software engineer.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -42,7 +43,7 @@
 			</article>
 
 		<!-- technologies -->
-			<article id="work" class="wrapper style2">
+			<article id="about" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>About me.</h2>
@@ -60,7 +61,7 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
+						<h2>My most recent projects.</h2>
 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 					</header>
 					<div class="row">
@@ -152,7 +153,7 @@
 			</article>
 
 				<!-- technologies -->
-				<article id="work" class="wrapper style2">
+				<article id="technologies" class="wrapper style2">
 					<div class="container">
 						<header>
 							<h2>Technologies I'm proficient in.</h2>
