contact form connected

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="container">
 					<header>
 						<h2>My most recent projects.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<p>To remain sharp and continue improving, these are always a work in progress, and I always have a couple more ideas in the pipeline.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -131,8 +131,10 @@
 							</article>
 						</div> -->
 						<div class="container">
-							<h2>Some highlights from my past life</h2>
-							<p>Proin odio consequat sapien vestibulum consequat lorem dolore feugiat.</p>
+							<header>
+								<h2>Some highlights from my past life</h2>
+								<p>These are just a few. Want to know more about my time in entertainment? Feel free to ask.</p>
+							</header>
 						</div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -169,7 +171,7 @@
 							
 					</div>
 					<footer class="container">
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Pretty cool huh? Check out all the languages, frameworks, and other techonoliges App Academy and CS50 managed to shove into my head.</p>
 						<a href="#technologies" class="button large scrolly">Technologies I work with</a>
 					</footer>
 				</div>
@@ -180,7 +182,7 @@
 					<div class="container">
 						<header>
 							<h2>Technologies I'm proficient in.</h2>
-							<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+							<p>App Academy was well over 1000 hours of instruction and projects equating to several years worth of comparable college courses, and CS50 made understanding computer science theory a breeze.</p>
 						</header>
 						<div class="row aln-center aln-bottom">
 							<div class="col-4 col-6-medium col-12-small">
@@ -266,7 +268,7 @@
 						</div>
 				
 						<footer>
-							<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+							<p></p>
 							<a href="#contact" class="button large scrolly">Get in touch with me</a>
 						</footer>
 					</div>
@@ -281,7 +283,7 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
+							<form method="POST" action="https://formspree.io/f/xknkqbaz">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
