site complete for now

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="container">
 					<header>
 						<h2>My most recent projects.</h2>
-						<p>To remain sharp and continue improving, these are always a work in progress, and I always have a couple more ideas in the pipeline.</p>
+						<p>To remain sharp and continue improving, these are always a work in progress, and I always have a couple more ideas in the pipeline. These projects are hosted on Heroku and sometimes the dynos take a few seconds to start up.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -278,8 +278,8 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Want to work with me?</h2>
+						<p>Feel free to shoot me a message. I'm open to freelance, contract work, and full-time employement.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
