changed about note in html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 			</article>
 
-		<!-- technologies -->
+		<!-- about -->
 			<article id="about" class="wrapper style2">
 				<div class="container">
 					<header>
