minor change to scratch io description

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<article class="box style2">
 								<a href="https://project-whisk.herokuapp.com/" class="image featured"><img src="images/scratchio.png" alt="" /></a>
 								<h3><a href="https://project-whisk.herokuapp.com/">Scratch.io</a></h3>
-								<p>Eventbright inspired app for Gamejams and participants allowing users to create, search, enter and manage teams.</p>
+								<p>Many lessons were learned on this project. An Eventbright inspired app for Gamejams and participants allowing users to create, search, enter and manage teams.</p>
 							</article>
 						</div>
 						<!-- <div class="col-4 col-6-medium col-12-small">
