--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://syphr.herokuapp.com/" class="image featured"><img src="images/syphr.png" alt="" /></a>
-								<h3><a href="https://syphr.herokuapp.com/">Syphr</a></h3>
+								<a href="https://syphr-1v0q.onrender.com" class="image featured"><img src="images/syphr.png" alt="" /></a>
+								<h3><a href="https://syphr-1v0q.onrender.com">Syphr</a></h3>
 								<p>A single page web app that allows users to send messages through an emulation of the Enigma Machine from WWII.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://goodgamesgg.herokuapp.com/" class="image featured"><img src="images/goodgamesgg.png" alt="" /></a>
-								<h3><a href="https://goodgamesgg.herokuapp.com/">GoodGames.gg</a></h3>
+								<a href="https://goodgamesgg.onrender.com" class="image featured"><img src="images/goodgamesgg.png" alt="" /></a>
+								<h3><a href="https://goodgamesgg.onrender.com">GoodGames.gg</a></h3>
 								<p>A Goodreads inspired site, but for games.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://project-whisk.herokuapp.com/" class="image featured"><img src="images/scratchio.png" alt="" /></a>
-								<h3><a href="https://project-whisk.herokuapp.com/">Scratch.io</a></h3>
+								<a href="https://scratchio.onrender.com" class="image featured"><img src="images/scratchio.png" alt="" /></a>
+								<h3><a href="https://scratchio.onrender.com">Scratch.io</a></h3>
 								<p>Many lessons were learned on this project. An Eventbright inspired app for Gamejams and participants allowing users to create, search, enter and manage teams.</p>
 							</article>
 						</div>
