changed links and bio

--- a/index.html
+++ b/index.html
@@ -49,29 +49,28 @@
 						<h2>About me.</h2>
 					</header>
 						<div class="about-text">
-							<p>Though I come from a creative background, I have actually always been an engineer. When I was five or six, I was sent to an advanced technic lego camp for kids
-							more than twice my age. I would spend hours on end building and forget to eat. I first started learning to fly when I
-							was eight. In highschool, while it was practically required by law for Texas boys to be on the football team, I was on
-							the Solar Car Team, building and racing street legal solar cars, teaching other students how to do the same, and hosting
-							races for us to compete in. The array and battery system I designed and built was used on the car for nearly a decade
-							after I left. The team also hosted a renowned regional science fair. I built a bridge out of popsicle sticks that
-							supported at least 400 pounds. We ran out of space for people to stand on it. My love of science and technology was
+							<p>Though I come from a creative background, I have always been an engineer. When I was six, I was sent to an advanced Lego Technic camp for kids
+							more than twice my age. I would spend hours on end building, so focused that I would forget to eat. In highschool, while it was practically 
+							required by law for Texas boys to be on the football team, I was on the Solar Car Team, building and racing street legal solar cars, teaching 
+							other students how to do the same, and hosting races for us to compete in. The array and battery system I designed and built was used on the 
+							car for nearly a decade after I left. The team also hosted a renowned regional science fair where I built a two meter long bridge out of popsicle 
+							sticks that supported at least 400 pounds. We ran out of space for people to stand on it. My love of science and technology was
 							apparent throughout my youth and it’s no wonder that this is around the time when I first started messing around with
 							HTML and computers.</p>
-							<p>I fell into film at an early age so that’s what I majored in, but my electives were filled with electrical engineering
-							and particle physics classes. During my entertainment career, I had just about every job on and off set at one point or
+							<p>I fell into film at an early age and so that’s what I majored in, but my electives were filled with electrical engineering
+							and particle physics classes. During my entertainment career, I did just about every job on and off set at one point or
 							another, but the jobs I gravitated toward and enjoyed most - producing and writing - were jobs that require creative
-							problem solving. Writing and adaptation in particular reminds me a lot of coding: you have a certain amount of
-							information, thoughts, and feelings you need to get across in a limited amount of time and space while following a
+							problem solving. Writing and adaptation of prexisting IP or historical events in particular reminds me a lot of coding: 
+							you have a certain amount of information, thoughts, and feelings you need to get across in a limited amount of time and space while following a
 							specific formula and structure. By utilizing only a few literary devices - or now, as a programmer, only a few lines of
 							code - one is able to create endless possibilities. Engineers use things like loops and data structures, writers use
 							things like foreshadowing and irony.</p>
 							<p>I enjoyed a fairly successful entertainment career, but I realized not too long ago that it was not fulfilling my desire
 							to exercise the left side of my brain just as much as the right. After a short stint as a commercial real estate agent I
-							found myself taking to the analysis and strategy more than anything else. I was getting closer, but unfortunately, as an
-							agent, that’s not what pays the bills. I eventually stumbled upon Harvard’s C50 on Edx. For the first time since
-							childhood, I spent hours on end building something to the point that I had forgotten to eat. I knew then that this was
-							what I was looking for. I decided to explore programming with all I had and dove headfirst into self-study and joined the best full-stack bootcamp I could find, App Academy.</p>
+							found myself taking to the analysis and strategy more than anything else. I eventually stumbled upon Harvard’s C50 on Edx. For the 
+							first time since childhood, I spent hours on end building something to the point that I had forgotten to eat. I knew then that this was
+							what I was looking for. I decided to explore programming with all I had and dove headfirst into self-study and joined the best full-stack 
+							bootcamp I could find, App Academy.</p>
 						</div>
 					<footer>
 						<p>Interested in what I can do?</p>
@@ -85,13 +84,13 @@
 				<div class="container">
 					<header>
 						<h2>My most recent projects.</h2>
-						<p>To remain sharp and continue improving, these are always a work in progress, and I always have a couple more ideas in the pipeline. These projects are hosted on Heroku and sometimes the dynos take a few seconds to start up.</p>
+						<p>To remain sharp and continue improving, these are always a work in progress, and I always have a couple more ideas in the pipeline.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://youtu.be/dOggcAjqpSU" class="image featured"><img src="images/syphr.png" alt="" /></a>
-								<h3><a href="https://youtu.be/dOggcAjqpSU">Syphr</a></h3>
+								<a href="https://youtu.be/slUfsWSCsKY" class="image featured"><img src="images/syphr.png" alt="" /></a>
+								<h3><a href="https://youtu.be/slUfsWSCsKY">Syphr</a></h3>
 								<p>A single page web app that allows users to send messages through an emulation of the Enigma Machine from WWII.</p>
 							</article>
 						</div>
