updated demo links

--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://youtu.be/slUfsWSCsKY" class="image featured"><img src="images/syphr.png" alt="" /></a>
-								<h3><a href="https://youtu.be/slUfsWSCsKY">Syphr</a></h3>
+								<a href="https://youtu.be/mG4PASh8jpU" class="image featured"><img src="images/syphr.png" alt="" /></a>
+								<h3><a href="https://youtu.be/mG4PASh8jpU">Syphr</a></h3>
 								<p>A single page web app that allows users to send messages through an emulation of the Enigma Machine from WWII.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://youtu.be/wtj2SFm4BiM" class="image featured"><img src="images/goodgamesgg.png" alt="" /></a>
-								<h3><a href="https://youtu.be/wtj2SFm4BiM">GoodGames.gg</a></h3>
+								<a href="https://youtu.be/q9v065fLVt8" class="image featured"><img src="images/goodgamesgg.png" alt="" /></a>
+								<h3><a href="https://youtu.be/q9v065fLVt8">GoodGames.gg</a></h3>
 								<p>A Goodreads inspired site, but for games.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://youtu.be/Q_1EC5jAAuE" class="image featured"><img src="images/scratchio.png" alt="" /></a>
-								<h3><a href="https://youtu.be/Q_1EC5jAAuE">Scratch.io</a></h3>
+								<a href="https://youtu.be/G0a8dNSUI_s" class="image featured"><img src="images/scratchio.png" alt="" /></a>
+								<h3><a href="https://youtu.be/G0a8dNSUI_s">Scratch.io</a></h3>
 								<p>Many lessons were learned on this project. An Eventbright inspired app for Gamejams and participants allowing users to create, search, enter and manage teams.</p>
 							</article>
 						</div>
